--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <div>Naveen</div>
     <div>Naveen</div>
     <div>Naveen</div>
+
+
+    <h1>Naveen</h1>
+    <h2>Naveen</h2>
+    <h3>Naveen</h3>
+    <h4>Naveen</h4>
+    <h5>Naveen</h5>
+    <h6>Naveen</h6>
+
     <!--In-Line Element-->
     <span>Naveen_2</span>
     <span>Naveen_2</span>
